# ExampleProject

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
lib/: CMakeLists.txt
lib/MyModuleLib/: CMakeLists.txt  MyModuleLibExport.h  mymodule.cpp  mymodule.h
lib/MySharedLib/: CMakeLists.txt  MySharedLibExport.h  mylib.cpp  mylib.h
lib/MyStaticLib/: CMakeLists.txt  MathModule.cpp  MathModule.h  StringUtils.cpp  StringUtils.h  add.cpp  add.h
tests/: CMakeLists.txt
tests/middle/: CMakeLists.txt  test_integration.cpp
tests/small/: CMakeLists.txt  MockBase.cpp  MockBase.h  example_tests.cpp
